--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@unocss/nuxt": "^0.47.6",
     "@unocss/preset-icons": "^0.46.2",
     "nuxt": "3.0.0"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^0.1.8"
   }
 }
